--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,2 @@
 eureka.client.service-url.defaultzone=http://localhost:8761/eureka
-welcome.note=hai from config server git hub
+welcome.note=hai from config server git hub on 12 nov 2025
