--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,2 +1,2 @@
 eureka.client.service-url.defaultzone:http://localhost:8761/eureka
-welcome.note:hai from config server git hub on 12 nov 2025 11111 from dev
+welcome.note:hai from config server git hub on 12 nov 2025 11111 from dev upadted 2222
